Ого, возвращаемся в эпоху динозавров к джаве 8 :(